welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: ')' expected but '}' found.
}
^Array1:11: error: Unmatched closing brace '}' ignored here
}
^